projects.mesure.x10.mx/public_html/console-clicker/style.css
* {
    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
}
#console {
    background-color: black;
    color: white;
    width: 90dvw;
    height: 90dvh;
    margin: auto;
    position: relative;
    padding: 0px;
}
p {
    margin-top: 0px;
    margin-bottom: 0px;
}
html, body {
    height: 100%;
    width: 100%;
    margin: 0px;
    overflow: hidden;
}
#console-container {
    align-items: center;
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
}
#command {
    position: absolute;
    bottom: 0px;
    width: 100%;
    box-sizing: border-box;
    background: none;
    border: none;
    color: white;
    font-size: 1.05em;
    outline: none;
}
#command::placeholder {
    color: gray;
    font-style: italic;
    opacity: 1;
}

